docs(compat): remove the duplicated same-release-exception counts (#491)
`COMPATIBILITY.md` stated how many 6.3.0 removals used the same-release
exception in three separate places, and two of the three disagreed with
the eight-bullet list they described: the clause section said "Six
removals" above a prose roster of five, and the further-exception
paragraph said "after the seven above" when the list had grown to eight.

The fix removes the duplicated counts rather than correcting them. A
count kept away from the list it counts has no mechanism keeping it
honest — it goes stale the next time an entry is added, which is exactly
how both of these drifted, and correcting the numbers would only reset
the clock on the same defect. After this change exactly one quantity for
that list remains, in the sentence directly above it ("Eight removals
used the same-release exception"), and every other passage points at the
list instead of restating a number.

The clause section's five-entry prose roster is replaced by a pointer.
Nothing is lost: the `--add-opens` / `ExceptionInInitializerError`
reproduction it carried survives in `compatibility/records/6.3.0.md`
(lines 608 and 611), as does the zero-callers / never-reached-a-tagged-
release reasoning (five occurrences there).

Swept the whole file for the same defect class — a quantity stated away
from the thing it quantifies — rather than stopping at the two reported
instances. Two more were found and fixed:

- The document's own summary of itself called the exception "the two
  same-release exceptions". The normative text states exactly *one*
  general exception, holding when at least one of *two clauses* applies.
  Now "the same-release exception".
- The `final`-method migration guide said the fix is "a rename, not a
  rewrite, in every case but one", above a five-row table in which *two*
  rows say to delete the override outright. De-quantified instead of
  renumbered, for the same reason as above.

Every removal entry's reason